<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="@drawable/szinatmenet_bc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <Spinner
            android:layout_marginTop="4dp"
            android:id="@+id/Select_language"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"

            android:background="@drawable/button_kerekites_sarga"
            android:textAlignment="center"

            android:entries="@array/Nyelv"

            android:spinnerMode="dialog"

            app:layout_constraintBottom_toTopOf="@id/szolgaltatas_ar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/szolgaltatas_mennyiseg"
            app:layout_constraintTop_toBottomOf="@id/szolgaltatasok_spinner"
            app:layout_constraintVertical_bias="0.0" />
        <Spinner

            android:id="@+id/Select_penz_nem"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="4dp"

            android:background="@drawable/button_kerekites_sarga"
            android:textAlignment="center"

            android:entries="@array/Penz"

            android:spinnerMode="dialog"
 />

        <EditText

            android:id="@+id/Ceg_nev_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="4dp"
            android:inputType="text"
            android:hint="@string/Ceg_nev_"


            android:background="@drawable/munkalap_editek"/>
        <EditText
            android:id="@+id/Ceg_cim_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="4dp"
            android:inputType="text"
            android:hint="@string/Ceg_cim"


            android:background="@drawable/munkalap_editek"/>
        <EditText
            android:id="@+id/Ceg_phone_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/munkalap_editek"
            android:inputType="text"
            android:hint="@string/ceg_tel"
 />
        <EditText
            android:id="@+id/Ceg_email_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/munkalap_editek"
            android:inputType="text"
            android:hint="@string/Ceg_email"
 />

        <Button
            android:id="@+id/logo_tallozas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="get_logo_path"
            android:text="@string/Logo_tallozas"
            android:background="@drawable/button_kerekites_sarga"
            android:layout_marginBottom="4dp"/>

        <ImageView
            android:id="@+id/Logo_elonezet_settings"
            android:layout_width="match_parent"
            android:layout_height="55dp"


            android:layout_marginBottom="4dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/szolgaltatasok_tallozasa_settings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:onClick="get_services_path"
                android:text="Excel tallózás"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.884"
                android:background="@drawable/button_kerekites_sarga"
                android:layout_marginBottom="4dp"/>

            <CheckBox
                android:id="@+id/Excel_tallozas_vnem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_kerekites_sarga"
                android:checked="false"
                android:onClick="Hasznaljon_excelt"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/Excel_hasznalat_string"
                app:layout_constraintBottom_toTopOf="@+id/szolgaltatasok_tallozasa_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/Csillagosresz_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/munkalap_editek"
            android:inputType="text"
            android:hint="@string/Megjegyzes_1"

 />

        <EditText
            android:id="@+id/Keretesszoveg_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingLeft="15dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/munkalap_editek"
            android:inputType="text"
            android:hint="@string/Megjegyzes_2"
 />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <CheckBox
                android:id="@+id/Munkalap_verzio1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/Munkalap_verzio2"
                android:text="@string/Munkalap_v1"
                android:onClick="Munkalap_valtas"
                android:background="@drawable/button_kerekites_sarga"
                tools:layout_editor_absoluteY="200dp"
                android:paddingLeft="20dp"/>

            <CheckBox
                android:id="@+id/Munkalap_verzio2"

                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/Munkalap_verzio1"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/munkalap_hamarosan"
                android:enabled="false"
                android:onClick="Munkalap_valtas2"
                android:background="@drawable/button_kerekites_sarga"
                tools:layout_editor_absoluteY="200dp"
                android:paddingLeft="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/Mentes_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="Beallitasok_mentese"
            android:text="@string/Mentes_string"
            android:background="@drawable/button_kerekites"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>