<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/szinatmenet_bc">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/felkor_feher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/fb_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            android:onClick="Facebook_link"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/www_icon"
            android:layout_width="43dp"
            android:layout_height="43dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.904"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.004"
            app:srcCompat="@drawable/domain" />


        <Button
            android:id="@+id/Munkalap_V1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/button_kerekites"
            android:drawableRight="@drawable/kicsi_icon"
            android:drawablePadding="-30dp"
            android:onClick="Munkalap_button"
            android:paddingRight="15dp"
            android:text="@string/Munkalap_button"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466" />

        <Button
            android:id="@+id/Bovebben_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/button_kerekites_sarga"
            android:drawableRight="@drawable/send_kicsi"
            android:drawablePadding="-40dp"
            android:gravity="center"
            android:onClick="Tobber_akar"
            android:paddingRight="15dp"
            android:text="@string/Bovebben_button"
            android:textColor="#ffffff"

            app:layout_constraintBottom_toTopOf="@id/Kilepes_button"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Beallitasok_button" />

        <ImageView
            android:id="@+id/Kor_icon"
            android:layout_width="325dp"
            android:layout_height="166dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo_big" />

        <Button
            android:id="@+id/Beallitasok_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/button_kerekites"
            android:drawableRight="@drawable/settings_kicsi"
            android:drawablePadding="-30dp"
            android:onClick="Beallitasok_button"
            android:paddingRight="15dp"
            android:text="@string/Beallitasok_button"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.503"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Munkalap_V1"
            app:layout_constraintVertical_bias="0.335" />

        <Button
            android:id="@+id/Kilepes_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/button_kerekites"
            android:drawableRight="@drawable/exit_kicsi"
            android:drawablePadding="-30dp"
            android:onClick="Close_button"
            android:paddingRight="10dp"
            android:text="@string/Kilepes_button"
            android:textColor="#ffffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Bovebben_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>